package com.english.learning.enums;

public enum UserProgressStatus {
    IN_PROGRESS,
    COMPLETED,
    SKIPPED
}
